US-06-HTTPS changes to outbound setup and fixed saving certification metadata in ordnance to URIs and already existing certification metadata